Style activity page search results.
Implement basic styling for the activity page search result list from the specs at:
https://trello.com/c/TDZE8zFu/416-document-component

--- a/h/static/styles/site-v2.scss
+++ b/h/static/styles/site-v2.scss
@@ -4,6 +4,7 @@
 @import 'partials-v2/util';
 
 // Components
+@import 'partials-v2/annotation-card';
 @import 'partials-v2/btn';
 @import 'partials-v2/dropdown-menu';
 @import 'partials-v2/form-actions';
@@ -13,6 +14,7 @@
 @import 'partials-v2/link';
 @import 'partials-v2/masthead';
 @import 'partials-v2/nav-bar';
+@import 'partials-v2/search';
 @import 'partials-v2/search-bar';
 @import 'partials-v2/tabs';
 
