--- a/h/templates/activity/search.html.jinja2
+++ b/h/templates/activity/search.html.jinja2
@@ -1,70 +1,69 @@
 {% extends "h:templates/layouts/base.html.jinja2" %}
+
+{% from '../includes/annotation_card.html.jinja2' import annotation_card %}
+
 {% block content %}
-{{ panel('navbar') }}
 
-{% if total %}
-<p>
-Total annotations: {{ total }}
-</p>
-{% endif %}
+  {{ panel('navbar') }}
 
-{% if tags %}
-<p>
-Tags (first ten):
-<ul>
-  {% for tag in tags %}
-  <li>{{ tag.tag }} ({{ tag.count }})</li>
-  {% endfor %}
-</ul>
-</p>
-{% endif %}
-
-{% if users %}
-<p>
-Users (first ten):
-<ul>
-  {% for user in users %}
-  <li>{{ user.user }} ({{ user.count }})</li>
-  {% endfor %}
-</ul>
-</p>
-{% endif %}
-
-<ol>
-  {% for timeframe in timeframes %}
-    <li>
-      <p><strong>{{ timeframe.label }}</strong></p>
-      <ol>
-        {% for bucket in timeframe.document_buckets.values() %}
-          <li>
-            <p><strong>{{ bucket.title }}</strong></p>
-            <p style="font-size: 0.8em;">
-            Domain: {{ bucket.domain }}<br>
-            URI: {{ bucket.uri }}<br>
-            Count: {{ bucket.annotations_count }}<br>
-            Tags: {{ bucket.tags }}<br>
-            Users: {{ bucket.users }}
-            </p>
-            <ol>
-              {% for result in bucket.annotations %}
-                <li>
-                  <p>ID: {{ result.annotation.id }}</p>
-                  <p>Updated: {{ result.annotation.updated.strftime('%d %b %Y') }}</p>
-                  <p>User: {{ result.annotation.userid }}</p>
-                  <p>Group: {{ result.group.name }}</p>
-                  <p>Shared: {{ result.annotation.shared }}</p>
-                  <p>URI: {{ result.annotation.target_uri }}</p>
-                  <p>Tags: {{ ','.join(result.annotation.tags) }}</p>
-                  <p>Quote:<br>{{ result.annotation.quote|safe }}</p>
-                  <p>Text:<br>{{ result.annotation.text_rendered|safe }}</p>
-                  <p>Desc:<br>{{ result.annotation.description|safe }}</p>
-                </li>
-              {% endfor %}
+  <div class="search-result-container">
+    <ol class="search-result-list">
+      {% for timeframe in timeframes %}
+        <li class="search-result__timeframe">
+          {{ timeframe.label }}
+        </li>
+        <li>
+          {% for bucket in timeframe.document_buckets.values() %}
+            <ol class="search-result__details">
+              <li class="search-result__domain search-result-bucket">
+                {{ bucket.domain }}
+              </li>
+              <li class="search-result__title search-result-bucket">
+                {{ bucket.title }}
+                <div class="search-result__annotation-cards-info">
+                  <ol class="search-result__annotation-cards">
+                    {% for result in bucket.annotations %}
+                      {{ annotation_card(result.annotation, request) }}
+                    {% endfor %}
+                  </ol>
+                  <div class="search-result__annotation-metadata">
+                    <div class="search-result__metadata-key">
+                      Address
+                    </div>
+                    <div class="search-result__metadata-val">
+                      {{ bucket.uri }}
+                    </div>
+                    {% if bucket.tags %}
+                      <div class="search-result__metadata-key">
+                        Tags
+                      </div>
+                      <ul class="search-result__metadata-val">
+                        {% for tag in bucket.tags %}
+                          <li>{{ tag }}</li>
+                        {% endfor %}
+                      </ul>
+                    {% endif %}
+                    <div class="search-result__metadata-key">
+                      Annotators
+                    </div>
+                    <ul class="search-result__metadata-val">
+                      {% for user in bucket.users %}
+                        <li>{{ user.split(':')[1] }}</li>
+                      {% endfor %}
+                    </ul>
+                  </div>
+                </div>
+              </li>
+              <li class="search-result__annotations-count search-result-bucket">
+                <div class="search-result__annotations-count-container">
+                  {{ bucket.annotations_count }}
+                </div>
+              </li>
             </ol>
-          </li>
-        {% endfor %}
-      </ol>
-    </li>
-  {% endfor %}
-</ol>
+          {% endfor %}
+        </li>
+      {% endfor %}
+    </ol>
+  </div>
+
 {% endblock %}
