--- a/h/templates/activity/search.html.jinja2
+++ b/h/templates/activity/search.html.jinja2
@@ -2,6 +2,63 @@
 
 {% from '../includes/annotation_card.html.jinja2' import annotation_card %}
 
+{# Card displaying statistics about a bucket of annotations. #}
+{% macro bucket_stats(bucket) %}
+<div class="search-result__annotation-metadata">
+  <div class="search-result__metadata-key">
+    Address
+  </div>
+  <div class="search-result__metadata-val">
+    {{ bucket.uri }}
+  </div>
+  {% if bucket.tags %}
+    <div class="search-result__metadata-key">
+      Tags
+    </div>
+    <ul class="search-result__metadata-val">
+      {% for tag in bucket.tags %}
+        <li>{{ tag }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+  <div class="search-result__metadata-key">
+    Annotators
+  </div>
+  <ul class="search-result__metadata-val">
+    {% for user in bucket.users %}
+      <li>{{ user.split(':')[1] }}</li>
+    {% endfor %}
+  </ul>
+</div>
+{% endmacro %}
+
+{#
+  A collapsible bucket/group of annotations
+#}
+{% macro search_result_bucket(bucket) %}
+<ol class="search-result__details">
+  <li class="search-result__domain search-result-bucket">
+    {{ bucket.domain }}
+  </li>
+  <li class="search-result__title search-result-bucket">
+    {{ bucket.title }}
+    <div class="search-result__annotation-cards-info">
+      <ol class="search-result__annotation-cards">
+        {% for result in bucket.annotations %}
+          {{ annotation_card(result.annotation, request) }}
+        {% endfor %}
+      </ol>
+      {{ bucket_stats(bucket) }}
+    </div>
+  </li>
+  <li class="search-result__annotations-count search-result-bucket">
+    <div class="search-result__annotations-count-container">
+      {{ bucket.annotations_count }}
+    </div>
+  </li>
+</ol>
+{% endmacro %}
+
 {% block content %}
 
   {{ panel('navbar') }}
@@ -14,52 +71,7 @@
         </li>
         <li>
           {% for bucket in timeframe.document_buckets.values() %}
-            <ol class="search-result__details">
-              <li class="search-result__domain search-result-bucket">
-                {{ bucket.domain }}
-              </li>
-              <li class="search-result__title search-result-bucket">
-                {{ bucket.title }}
-                <div class="search-result__annotation-cards-info">
-                  <ol class="search-result__annotation-cards">
-                    {% for result in bucket.annotations %}
-                      {{ annotation_card(result.annotation, request) }}
-                    {% endfor %}
-                  </ol>
-                  <div class="search-result__annotation-metadata">
-                    <div class="search-result__metadata-key">
-                      Address
-                    </div>
-                    <div class="search-result__metadata-val">
-                      {{ bucket.uri }}
-                    </div>
-                    {% if bucket.tags %}
-                      <div class="search-result__metadata-key">
-                        Tags
-                      </div>
-                      <ul class="search-result__metadata-val">
-                        {% for tag in bucket.tags %}
-                          <li>{{ tag }}</li>
-                        {% endfor %}
-                      </ul>
-                    {% endif %}
-                    <div class="search-result__metadata-key">
-                      Annotators
-                    </div>
-                    <ul class="search-result__metadata-val">
-                      {% for user in bucket.users %}
-                        <li>{{ user.split(':')[1] }}</li>
-                      {% endfor %}
-                    </ul>
-                  </div>
-                </div>
-              </li>
-              <li class="search-result__annotations-count search-result-bucket">
-                <div class="search-result__annotations-count-container">
-                  {{ bucket.annotations_count }}
-                </div>
-              </li>
-            </ol>
+            {{ search_result_bucket(bucket) }}
           {% endfor %}
         </li>
       {% endfor %}
