--- a/h/static/styles/partials-v2/_search.scss
+++ b/h/static/styles/partials-v2/_search.scss
@@ -14,21 +14,6 @@
   max-width: 950px;
 }
 
-.search-result-bucket {
-  padding: 10px 0px;
-  border-bottom: 1px solid $grey-3;
-}
-
-.search-result__details {
-  display: flex;
-  flex-direction: row;
-  background-color: $grey-2;
-
-  &:hover {
-    background-color: $grey-2;
-  }
-}
-
 .search-result__timeframe {
   font-weight: bold;
   padding-bottom: 10px;
@@ -36,18 +21,31 @@
   margin-top: 30px;
 }
 
-.search-result__domain {
+// A group of search results
+.search-result-bucket {
+  display: flex;
+  flex-direction: row;
+  padding: 10px 0px;
+  background-color: $grey-2;
+  border-bottom: 1px solid $grey-3;
+
+  &:hover {
+    background-color: $grey-2;
+  }
+}
+
+.search-result-bucket__domain {
   width: 130px;
   text-indent: 10px;
   color: $grey-4;
 }
 
-.search-result__title {
+.search-result-bucket__title {
   font-weight: bold;
   max-width: 695px;
 }
 
-.search-result__annotations-count-container {
+.search-result-bucket__annotations-count-container {
   width: 30px;
   padding: 5px 0px;
   background-color: $grey-2;
@@ -56,70 +54,67 @@
   float: right;
 }
 
-.search-result__annotations-count {
+.search-result-bucket__annotations-count {
   font-weight: bold;
   width: 75px;
 }
 
-.search-result__annotation-cards-info {
+.search-result-bucket__annotation-cards-info {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   margin-top: 10px;
 }
 
-.search-result__annotation-cards {
+.search-result-bucket__annotation-cards {
   width: 500px;
   margin-left: -38px;
 }
 
-.search-result__annotation-metadata {
+// Card displaying stats about a group of annotations in search results
+.search-bucket-stats {
   @include font-normal;
   width: 210px;
   margin-left: 30px;
   word-wrap: break-word;
 }
 
-.search-result__metadata-key {
+.search-bucket-stats__key {
   color: $grey-4;
 }
 
-.search-result__metadata-val {
+.search-bucket-stats__val {
   color: $grey-6;
   margin-bottom: 20px;
 }
 
 @media screen and (max-width: $max-phone-width) {
-  .search-result-bucket {
-    border: none;
-  }
-
-  .search-result__title {
-    margin-left: 10px;
-    margin-top: -15px;
-  }
-
   .search-result-list {
     margin-left: -25px;
     margin-right: 12px;
     max-width: 415px;
   }
 
-  .search-result__details {
-    flex-direction: column;
+  .search-result-bucket {
+    border: none;
   }
 
-  .search-result__annotation-cards-info {
+  .search-result-bucket__title {
+    margin-left: 10px;
+    margin-top: -15px;
+  }
+
+  .search-result-bucket__annotation-cards-info {
     flex-direction: column;
     margin-top: 15px;
     padding-right: 12px;
   }
 
-  .search-result__annotation-cards {
+  .search-result-bucket__annotation-cards {
     width: auto;
   }
 
-  .search-result__annotation-metadata {
+  .search-bucket-stats {
     margin-left: 5px;
     margin-top: 10px;
   }
