Fix width of annotation card
 - Use `max-width` rather than width for responsiveness

 - Set padding to 0 to remove default padding from <ol> rather than
   using a negative margin

 - Fix incorrect class name

--- a/h/static/styles/partials-v2/_search.scss
+++ b/h/static/styles/partials-v2/_search.scss
@@ -76,8 +76,9 @@
 }
 
 .search-result-bucket__annotation-cards {
-  width: 500px;
-  margin-left: -38px;
+  max-width: 500px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 // Card displaying stats about a group of annotations in search results
