--- a/h/static/styles/partials-v2/_search.scss
+++ b/h/static/styles/partials-v2/_search.scss
@@ -34,7 +34,7 @@
 .search-result-bucket {
   display: flex;
   flex-direction: row;
-  padding: 10px 0px;
+  padding: 10px 10px;
   background-color: $grey-2;
   border-bottom: 1px solid $grey-3;
 
@@ -44,14 +44,32 @@
 }
 
 .search-result-bucket__domain {
-  width: 130px;
-  text-indent: 10px;
+  width: 120px;
   color: $grey-4;
+}
+
+.search-result-bucket__content {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.search-result-bucket__header {
+  display: flex;
+  flex-direction: row;
 }
 
 .search-result-bucket__title {
   font-weight: bold;
-  max-width: 695px;
+  flex-grow: 1;
+}
+
+.search-result-bucket__annotation-cards-container {
+  display: flex;
+}
+
+.search-result-bucket__annotation-cards {
+  flex-grow: 1;
 }
 
 .search-result-bucket__annotations-count-container {
@@ -98,6 +116,19 @@
   margin-bottom: 20px;
 }
 
+// On large tablets and below, display bucket contents beneath rather than
+// alongside the domain
+@media screen and (max-width: $tablet-width + 100px) {
+    .search-result-bucket {
+      flex-direction: column;
+    }
+
+    .search-result-bucket__content {
+      margin-top: 10px;
+    }
+}
+
+// On normal tablets and below, display annotation stats below annotation list
 @media screen and (max-width: $tablet-width) {
 
   // Reduce margins on tablet and below to match navbar left/right margins
@@ -107,23 +138,8 @@
     margin-right: 10px;
   }
 
-  .search-result-bucket {
-    border: none;
-  }
-
-  .search-result-bucket__title {
-    margin-left: 10px;
-    margin-top: -15px;
-  }
-
-  .search-result-bucket__annotation-cards-info {
+  .search-result-bucket__annotation-cards-container {
     flex-direction: column;
-    margin-top: 15px;
-    padding-right: 12px;
-  }
-
-  .search-result-bucket__annotation-cards {
-    width: auto;
   }
 
   .search-bucket-stats {
