--- a/h/templates/deform/mapping_item.jinja2
+++ b/h/templates/deform/mapping_item.jinja2
@@ -2,7 +2,7 @@
 {% set field_class = 'form-input' %}
 {% set field_error_state_class = 'is-error' %}
 {% set field_label_class = 'form-input__label' %}
-{% set field_error_list_class = '' %}
+{% set field_error_list_class = 'form-input__error-list' %}
 {% set field_error_item_class = 'form-input__error-item' %}
 {% else %}
 {% set field_class = 'form-group form-field' %}
@@ -14,6 +14,7 @@
 
 {%- if not field.widget.hidden -%}
 <div class="{{ field_class }}
+            js-form-input
             {% if field.error %}{{ field_error_state_class }}{% endif %}
             {% if field.widget.template in ('textinput', 'textarea') and field.widget.max_length -%}js-character-limit{% endif %}"
      {%- if field.description -%}
