Hide Save/Cancel buttons during page load on forms using inline editing

--- a/h/static/styles/partials-v2/_form-actions.scss
+++ b/h/static/styles/partials-v2/_form-actions.scss
@@ -14,7 +14,7 @@
   position: relative;
   z-index: $zindex-modal-content;
 
-  .env-js-capable &.is-hidden {
+  &.is-hidden {
     display: none;
   }
 }
